# seterm

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  device_finder.rs  event.rs  fileviewer.rs  main.rs  notif.rs  ui.rs
