[package]
name = "seterm"
version = "0.1.0"
description = "A serial terminal TUI intended for embedded developers"
authors = ["Shin Umeda <umeda.shin@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
serialport = "4.8.1"
tokio-serial = "5.4.5"
eyre = "0.6.12"
notify = "8.2.0"
clap = { version = "4.5.54", features = ["derive"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
